--- a/Day-05/style.css
+++ b/Day-05/style.css
@@ -1,50 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 *{
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
+
 body{
-  background-image: linear-gradient(90deg,#498553,#C3CF0A);
-  font-size: 'Roboto',san-serif;
+  font-family: 'ubuntu', sans-serif;
   display: flex;
-  justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  justify-content: center;
+  height: 100vh;
   overflow: hidden;
   margin: 0;
 }
-.search{
-    position: relative;
-    height: 50px;
-}
-.search .input{
-    background-color: #C3CF0A;
-    height: 50px;
-    width: 50px;
-    padding: 10px;
-    border: 0;
-    font-size:20px;
-    transition: width 0.3s ease;
-}
-.search .button{
-  background-color: #fff;
-  height: 50px;
-  width: 50px;
-  border: 0;
-  font-size: 20px;
-  top: 0;
-  left: 0;
+.bg {
+   background: url('https://images.unsplash.com/photo-1576161787924-01bb08dad4a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2104&q=80');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   position: absolute;
-  cursor: pointer;
-  transition: transform 0.3s ease;
+  top: -30px;
+  left: -30px;
+  height:calc(100vh + 60px);
+  width:calc( 100vw + 60px);
+  z-index:-1;
+  filter: blur(0px);
+  
 }
-.search.active .button{
-  transform: translateX(200px);
-}
-.search.active .input{
-  width: 200px;
-}
-.button:focus,
-.input:focus {
-  outline: none;
+.loading-text{
+   font-size: 50px;
+  color: #fff;
 }
