--- a/Day-07/style.css
+++ b/Day-07/style.css
@@ -101,7 +101,7 @@ h2{
 }
 .split.left{
     left:0;
-    background: url('https://images3.alphacoders.com/843/thumb-1920-843016.jpg');
+    background: url('https://i.gadgets360cdn.com/large/god_of_war_ps4_1514806318513.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   
