--- a/Day-07/style.css
+++ b/Day-07/style.css
@@ -101,7 +101,7 @@ h2{
 }
 .split.left{
     left:0;
-    background: url('https://i.gadgets360cdn.com/large/god_of_war_ps4_1514806318513.jpg');
+    background: url('https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S1_2560x1440-5d74d9b240bba8f2c40920dcde7c5c67_2560x1440-5d74d9b240bba8f2c40920dcde7c5c67');
   background-repeat: no-repeat;
   background-size: cover;
   
