--- a/Day-12/style.css
+++ b/Day-12/style.css
@@ -34,7 +34,7 @@ h1{
     margin: 10px;
     border-radius: 10px;
     overflow: hidden;
-    transition: 0.3s ease;
+    transition: 0.3zzzzzs ease;
     background-color: transparent;
     background-color: steelblue;
     
