--- a/Day-17/style.css
+++ b/Day-17/style.css
@@ -111,7 +111,8 @@ main{
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ffffff;
+    background-color: #000000;
+    color: #ffffff;
     padding: 1rem;
     max-height: 100%;
     transform: translateY(101%);
@@ -122,3 +123,28 @@ main{
 .movie:hover .overview{
     transform: translateY(0%);
 }
+
+#tags{
+    width: 80% ;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 10px auto;
+    
+
+}
+.tag{
+    color: #ffffff;
+    background-color: crimson;
+    border-radius: 50px;
+    padding:10px 20px ;
+    margin: 5px;
+    display: inline-block;
+    cursor: pointer;
+
+}
+.tag.highlight{
+    background-color: black;
+}
+ 
