--- a/style.css
+++ b/style.css
@@ -9,34 +9,26 @@ body{
     font-family: 'poppins',sanserif;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     overflow: hidden;
     background-color: steelblue;
+    color: whitesmoke;
     
-    
-    
-    
-    
-}
-
-.content {
-
-    display: flex;
-    flex-wrap: wrap;
-    margin: 50px;
-    justify-content: center;
-    align-items: center;
-    
-     
 }
 
 h2{
-    font-size: 1.5rem;
-    padding-right: 50px;
     
-
+    display: inline-flex;
+    font-size: 1.7rem;
+    padding:20px;
+    margin: 20px 0;
+    align-items: center;
+    border-radius: 10px;
+    background: rgba(4, 2, 2, 0.51);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     
+   
 }
 
 a{
