--- a/Day-39/style.css
+++ b/Day-39/style.css
@@ -9,7 +9,7 @@ body{
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height: 100vh;
+    height: 100vh;
     overflow: hidden;
 }
 
